removed white space from landing page bg, fixed button positioning, resized image

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -9,6 +9,8 @@
   font-style: normal;
   font-size: 100px;
   color: white;
+  padding-top: 200px;
+
 
   /* padding-top: 80px; */
 }
@@ -22,16 +24,17 @@ h2 {
 }
 
 .hero {
-  height: 85vh;
+  height: 100vh;
   width: 100vw;
   background-size: cover;
-  background-image: url('./../../../images/pets-hero.png');
+  background-image: url('./../../../images/pets-landing.png');
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
   margin-bottom: 0;
   margin-left: 0;
-  z-index: 1;
+  text-align: center;
+
 }
 
 .hero::after {
@@ -127,4 +130,10 @@ transition: border-color 0.25s;
 #btn-cat {
   background-color: orange;
   color: white;
+}
+
+
+
+#restart {
+  padding-top: 50px;
 }
